--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,11 @@ requirements = []
 path = 'contracts/bci-integration.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.consciousness-governance]
+path = 'contracts/consciousness-governance.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
