--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -14,6 +14,11 @@ epoch = 2.5
 path = 'contracts/consciousness-governance.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.consciousness-storage]
+path = 'contracts/consciousness-storage.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
