--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -24,6 +24,11 @@ epoch = 2.5
 path = 'contracts/consciousness-token.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.consciousness-transfer]
+path = 'contracts/consciousness-transfer.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
